style: dashboard gap fixes

--- a/src/views/pages/tallulah-dashboard/components/PatientStoryDashboard/PatientStoryDashboard.module.css
+++ b/src/views/pages/tallulah-dashboard/components/PatientStoryDashboard/PatientStoryDashboard.module.css
@@ -4,7 +4,7 @@
 .dashboardLayout {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 50px;
+  grid-gap: 15px;
   margin-top: 20px;
 }
 
